--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    ext {
+        version_core = "1.3.2"
+        version_coroutine = "1.3.9"
+        version_constraint_layout = "2.0.4"
+        version_gradle = '4.1.3'
+        version_kotlin = "1.4.32"
+        version_lifecycle = "2.3.1"
+        version_navigation = '2.3.5'
+        version_room = "2.2.6"
+        version_material = "1.3.0"
+        version_app_compat = "1.2.0"
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$version_gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
